--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,5 @@
-// @use './bootstrap';
-// @use './base';
-// @use './forms';
-// // Components
-// @use './components';
+@use './bootstrap';
+@use './base';
+@use './forms';
+// Components
+@use './components';
