fix(style): test removed current wizard step height

--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -1,7 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-.wizard,
-.current-wizard-step {
+.wizard {
   padding-top: $spacing-600;
   padding-bottom: 120px; // more spacing at the bottom to be able to scroll through past the last content
   min-height: $wizard-body-height;
