--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -1,222 +1,222 @@
-// @use '../../../../styles/settings' as *;
+@use '../../../../styles/settings' as *;
 
-// .panel-formcontextualhelp {
-//   @include elevation-1;
-//   padding: $spacing-400 $spacing-300;
-//   background: $bg-primary;
-//   display: block;
-//   border-radius: $border-radius-low;
-//   border: 1px solid $color-shade-navy-40;
-//   margin-bottom: $spacing-600;
+.panel-formcontextualhelp {
+  @include elevation-1;
+  padding: $spacing-400 $spacing-300;
+  background: $bg-primary;
+  display: block;
+  border-radius: $border-radius-low;
+  border: 1px solid $color-shade-navy-40;
+  margin-bottom: $spacing-600;
 
-//   > legend {
-//     margin-bottom: 0;
-//     display: flex;
-//   }
+  > legend {
+    margin-bottom: 0;
+    display: flex;
+  }
 
-//   .panel-formcontextualhelp__header {
-//     display: flex;
-//     align-items: center;
-//     margin-bottom: $spacing-200;
-//   }
+  .panel-formcontextualhelp__header {
+    display: flex;
+    align-items: center;
+    margin-bottom: $spacing-200;
+  }
 
-//   .panel-formcontextualhelp__icon {
-//     margin-right: $spacing-200;
-//     width: 24px;
-//     height: 24px;
-//   }
+  .panel-formcontextualhelp__icon {
+    margin-right: $spacing-200;
+    width: 24px;
+    height: 24px;
+  }
 
-//   .panel-formcontextualhelp__title {
-//     color: $text-dark;
-//     font-size: $size-font-h6;
-//     font-weight: $font-weight-bold;
-//     line-height: 125%;
-//     letter-spacing: $letter-spacing-default;
-//   }
+  .panel-formcontextualhelp__title {
+    color: $text-dark;
+    font-size: $size-font-h6;
+    font-weight: $font-weight-bold;
+    line-height: 125%;
+    letter-spacing: $letter-spacing-default;
+  }
 
-//   .plain-text-wrapper {
-//     p {
-//       margin-top: 0;
-//       padding: $spacing-100 0;
+  .plain-text-wrapper {
+    p {
+      margin-top: 0;
+      padding: $spacing-100 0;
 
-//       &:last-child {
-//         margin-bottom: 0;
-//       }
-//     }
-//   }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
 
-//   &--info {
-//     .panel-formcontextualhelp__icon {
-//       content: url('images/icon-contextual-help-info-blue-info.svg');
-//     }
+  &--info {
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-info-blue-info.svg');
+    }
 
-//     .panel-formcontextualhelp__footer__link {
-//       display: inline-flex;
-//       align-items: center;
-//       text-decoration: none;
-//       color: $text-dark-primary;
-//       font-weight: 500;
+    .panel-formcontextualhelp__footer__link {
+      display: inline-flex;
+      align-items: center;
+      text-decoration: none;
+      color: $text-dark-primary;
+      font-weight: 500;
 
-//       &:hover,
-//       &:focus {
-//         color: $text-dark-primary;
-//         text-decoration: none;
-//       }
+      &:hover,
+      &:focus {
+        color: $text-dark-primary;
+        text-decoration: none;
+      }
 
-//       &::after {
-//         content: url('images/icon-contextual-help-arrow-navy-right.svg');
-//         margin-left: 0.5rem;
-//         font-size: 1.25rem;
-//         line-height: 1;
-//       }
-//     }
+      &::after {
+        content: url('images/icon-contextual-help-arrow-navy-right.svg');
+        margin-left: 0.5rem;
+        font-size: 1.25rem;
+        line-height: 1;
+      }
+    }
 
-//     .panel-formcontextualhelp__footer__link-text {
-//       margin-right: 0.75rem;
-//       color: $text-dark;
-//       font-weight: 500;
-//       text-decoration: none;
-//       transition: color 0.2s ease;
+    .panel-formcontextualhelp__footer__link-text {
+      margin-right: 0.75rem;
+      color: $text-dark;
+      font-weight: 500;
+      text-decoration: none;
+      transition: color 0.2s ease;
 
-//       &:hover,
-//       &:focus {
-//         color: $text-accent;
-//         text-decoration: none;
-//       }
+      &:hover,
+      &:focus {
+        color: $text-accent;
+        text-decoration: none;
+      }
 
-//       &:visited {
-//         color: $text-dark;
-//       }
-//     }
-//   }
+      &:visited {
+        color: $text-dark;
+      }
+    }
+  }
 
-//   &--error {
-//     border: 1px solid $stroke-error;
-//     background: $color-shade-red-05;
+  &--error {
+    border: 1px solid $stroke-error;
+    background: $color-shade-red-05;
 
-//     .panel-formcontextualhelp__icon {
-//       content: url('images/icon-error-primary.svg');
-//     }
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-error-primary.svg');
+    }
 
-//     .panel-formcontextualhelp__title {
-//       color: $text-error;
-//     }
+    .panel-formcontextualhelp__title {
+      color: $text-error;
+    }
 
-//     .panel-formcontextualhelp__footer__link,
-//     .panel-formcontextualhelp__footer__link-text {
-//       color: $text-error;
-//       font-weight: $font-weight-medium;
-//       text-decoration: none;
+    .panel-formcontextualhelp__footer__link,
+    .panel-formcontextualhelp__footer__link-text {
+      color: $text-error;
+      font-weight: $font-weight-medium;
+      text-decoration: none;
 
-//       &:hover,
-//       &:focus,
-//       &:visited {
-//         color: $text-error;
-//       }
-//     }
-//   }
+      &:hover,
+      &:focus,
+      &:visited {
+        color: $text-error;
+      }
+    }
+  }
 
-//   &--primary {
-//     @extend .panel-formcontextualhelp--tertiary;
-//     .panel-formcontextualhelp__icon {
-//       content: url('images/icon-contextual-help-info-primary.svg');
-//     }
-//     .panel-formcontextualhelp__footer__link::after {
-//       content: url('images/icon-contextual-help-arrow-primary.svg');
-//     }
-//     .panel-formcontextualhelp__title {
-//       color: $text-dark;
-//     }
-//     .plain-text-wrapper p {
-//       color: $text-dark-primary;
-//     }
-//   }
+  &--primary {
+    @extend .panel-formcontextualhelp--tertiary;
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-info-primary.svg');
+    }
+    .panel-formcontextualhelp__footer__link::after {
+      content: url('images/icon-contextual-help-arrow-primary.svg');
+    }
+    .panel-formcontextualhelp__title {
+      color: $text-dark;
+    }
+    .plain-text-wrapper p {
+      color: $text-dark-primary;
+    }
+  }
 
-//   &--secondary {
-//     border: 1px solid $stroke-tertiary;
-//     background: $bg-contextual-help-secondary;
-//     display: flex;
-//     padding: $spacing-400;
-//     align-items: flex-start;
-//     gap: $spacing-300;
-//     align-self: stretch;
+  &--secondary {
+    border: 1px solid $stroke-tertiary;
+    background: $bg-contextual-help-secondary;
+    display: flex;
+    padding: $spacing-400;
+    align-items: flex-start;
+    gap: $spacing-300;
+    align-self: stretch;
 
-//     .panel-formcontextualhelp__icon {
-//       content: url('images/icon-contextual-help-info-secondary.svg');
-//     }
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-info-secondary.svg');
+    }
 
-//     .panel-formcontextualhelp__footer__link::after {
-//       content: url('images/icon-contextual-help-arrow-secondary.svg');
-//       margin-left: 0.5rem;
-//     }
+    .panel-formcontextualhelp__footer__link::after {
+      content: url('images/icon-contextual-help-arrow-secondary.svg');
+      margin-left: 0.5rem;
+    }
 
-//     .plain-text-wrapper p {
-//       color: $text-dark-primary;
-//     }
-//   }
+    .plain-text-wrapper p {
+      color: $text-dark-primary;
+    }
+  }
 
-//   &--tertiary {
-//     border: 1px solid $stroke-dark;
-//     background: $bg-contextual-help-tertiary;
-//     display: flex;
-//     padding: $spacing-400;
-//     align-items: flex-start;
-//     gap: $spacing-300;
-//     align-self: stretch;
+  &--tertiary {
+    border: 1px solid $stroke-dark;
+    background: $bg-contextual-help-tertiary;
+    display: flex;
+    padding: $spacing-400;
+    align-items: flex-start;
+    gap: $spacing-300;
+    align-self: stretch;
 
-//     .panel-formcontextualhelp__icon {
-//       content: url('images/icon-contextual-help-info-tertiary.svg');
-//     }
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-info-tertiary.svg');
+    }
 
-//     .panel-formcontextualhelp__footer__link::after {
-//       content: url('images/icon-contextual-help-arrow-tertiary.svg');
-//       margin-left: 0.5rem;
-//     }
+    .panel-formcontextualhelp__footer__link::after {
+      content: url('images/icon-contextual-help-arrow-tertiary.svg');
+      margin-left: 0.5rem;
+    }
 
-//     .panel-formcontextualhelp__title,
-//     .panel-formcontextualhelp__footer__link,
-//     .panel-formcontextualhelp__footer__link-text,
-//     .plain-text-wrapper p {
-//       color: $text-white;
-//     }
-//   }
-// }
+    .panel-formcontextualhelp__title,
+    .panel-formcontextualhelp__footer__link,
+    .panel-formcontextualhelp__footer__link-text,
+    .plain-text-wrapper p {
+      color: $text-white;
+    }
+  }
+}
 
-// .field-wrapper.row {
-//   display: flex;
-//   align-items: center;
-//   gap: $spacing-300;
+.field-wrapper.row {
+  display: flex;
+  align-items: center;
+  gap: $spacing-300;
 
-//   .image-wrapper {
-//     display: flex;
-//     align-items: center;
+  .image-wrapper {
+    display: flex;
+    align-items: center;
 
-//     img {
-//       display: block;
-//       height: auto;
-//       max-width: 100%;
-//     }
-//   }
+    img {
+      display: block;
+      height: auto;
+      max-width: 100%;
+    }
+  }
 
-//   .plain-text-wrapper {
-//     display: flex;
+  .plain-text-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    h6,
+    p {
+      margin: 0;
+    }
+  }
+}
+
+// @include media('mobile') {
+//   .field-wrapper.row {
 //     flex-direction: column;
-//     justify-content: center;
+//     align-items: flex-start;
 
-//     h6,
-//     p {
-//       margin: 0;
+//     .plain-text-wrapper {
+//       margin-top: $spacing-300;
 //     }
 //   }
 // }
-
-// // @include media('mobile') {
-// //   .field-wrapper.row {
-// //     flex-direction: column;
-// //     align-items: flex-start;
-
-// //     .plain-text-wrapper {
-// //       margin-top: $spacing-300;
-// //     }
-// //   }
-// // }
