--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -1,8 +1,6 @@
 @use '../../../../styles/settings' as *;
-@forward 'wizard-theme';
 
-.wizard,
-.current-wizard-step {
+.wizard {
   padding-top: $spacing-600;
   padding-bottom: 120px; // more spacing at the bottom to be able to scroll through past the last content
   min-height: $wizard-body-height;
@@ -68,5 +66,200 @@
 
   .wizard-button-wrapper .field-wrapper {
     flex: unset;
+  }
+}
+
+.wizard {
+  position: relative;
+
+  &.wizard--bg-dark {
+    background: linear-gradient(
+      135deg,
+      $color-accent 25%,
+      $color-primary-navy 100%
+    );
+    color: $color-white;
+
+    .text-wrapper,
+    .number-wrapper,
+    .email-wrapper,
+    .radio-wrapper {
+      label,
+      .field-label {
+        color: $color-white;
+      }
+
+      input,
+      textarea {
+        color: $color-white;
+
+        &::placeholder {
+          color: rgba($color-white, 0.75);
+        }
+      }
+    }
+
+    h1,
+    h2,
+    h3 {
+      color: $color-white;
+      background: none;
+      background-clip: unset;
+      -webkit-background-clip: unset;
+      -webkit-text-fill-color: $color-white;
+      font-family: $font-family;
+      margin-bottom: $spacing-600;
+
+      &:last-child:not(:first-child) {
+        margin-bottom: 0;
+      }
+    }
+
+    h4,
+    h5,
+    h6 {
+      color: $color-white;
+      font-family: $font-family;
+      margin-bottom: $spacing-100;
+
+      &:last-child:not(:first-child) {
+        margin-bottom: 0;
+      }
+    }
+
+    p,
+    .subtitle {
+      color: $color-white;
+    }
+
+    .subtitle {
+      font-style: normal;
+      font-weight: lighter;
+      line-height: 130%;
+      margin: 0;
+
+      p {
+        margin: 0;
+        font-size: $size-font-subtitle;
+      }
+    }
+  }
+
+  &.wizard--bg-mid {
+    background: linear-gradient(
+      135deg,
+      $color-shade-blue-10 25%,
+      $color-shade-blue-25 100%
+    );
+  }
+
+  &.wizard--bg-dark,
+  &.wizard--bg-mid,
+  &.wizard--bg-light {
+    &::after {
+      @include media('tablet') {
+        content: '';
+        position: absolute;
+        display: block;
+        top: 0;
+        right: 0;
+        width: 360px;
+        height: 388px;
+        background-repeat: no-repeat;
+        background-size: contain;
+      }
+
+      @include media('desktop') {
+        top: auto;
+        right: auto;
+        left: 0;
+        bottom: 0;
+      }
+    }
+  }
+
+  &.wizard--bg-dark,
+  &.wizard--bg-mid {
+    &::after {
+      @include media('tablet') {
+        background-image: url('/images/mymsd-unity-pattern-top-right.svg');
+        background-position: top right;
+      }
+
+      @include media('desktop') {
+        background-image: url('/images/mymsd-unity-pattern-bottom-left.svg');
+        background-position: calc(100% - 120px) left;
+      }
+    }
+  }
+
+  &.wizard--bg-light {
+    background: $color-shade-blue-04;
+
+    &::after {
+      @include media('desktop') {
+        background-image: url('/images/mymsd-unity-pattern-top-right-light.svg');
+        background-position: left bottom;
+        transform: rotate(180deg);
+      }
+    }
+
+    .p-large p {
+      font-size: $size-font-body-large;
+      color: $text-dark-primary;
+      font-weight: normal;
+      font-style: normal;
+      line-height: 130%;
+      margin: 0;
+
+      p {
+        margin: 0;
+        color: $text-primary;
+        font-size: $size-font-body-large;
+      }
+    }
+  }
+
+  &.wizard--bg-light,
+  &.wizard--bg-mid {
+    color: $text-primary;
+
+    h1,
+    h2,
+    h3 {
+      @include heading-default($text-primary);
+      background: $color-gradient-blue;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    h4,
+    h5,
+    h6 {
+      font-family: $font-family;
+      font-weight: $font-weight-bold;
+      font-size: $size-font-h6;
+      color: $color-primary-navy;
+      line-height: 130%;
+      letter-spacing: $letter-spacing-default;
+    }
+
+    .subtitle,
+    .straptitle {
+      font-size: $size-font-subtitle;
+      color: $text-dark-primary;
+      font-weight: normal;
+      line-height: 130%;
+      margin: 0;
+    }
+  }
+
+  p {
+    color: $text-dark-primary;
+    font-size: $size-font-body-default;
+    font-family: $font-family;
+    line-height: 1.6;
+    font-weight: 400;
   }
 }
