--- a/blocks/form/components/wizard/_wizard-theme.scss
+++ b/blocks/form/components/wizard/_wizard-theme.scss
@@ -119,7 +119,7 @@
 
       @include media('desktop') {
         background-image: url('/images/mymsd-unity-pattern-bottom-left.svg');
-        background-position: calc(100% - 120px) left;
+        background-position: bottom left;
       }
     }
   }
@@ -168,7 +168,6 @@
     h4,
     h5,
     h6 {
-      font-family: $font-family;
       font-weight: $font-weight-bold;
       font-size: $size-font-h6;
       color: $color-primary-navy;
@@ -180,7 +179,7 @@
     .straptitle {
       font-size: $size-font-subtitle;
       color: $text-dark-primary;
-      font-weight: normal;
+      font-weight: 400;
       line-height: 130%;
       margin: 0;
     }
@@ -189,7 +188,6 @@
   p {
     color: $text-dark-primary;
     font-size: $size-font-body-default;
-    font-family: $font-family;
     line-height: 1.6;
     font-weight: 400;
   }
