--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -1,207 +1,255 @@
 @use '../../../../styles/settings' as *;
 @use '../../../../styles/base' as *;
 
-.wizard {
-  position: relative;
+.panel-formcontextualhelp {
+  @include elevation-1;
+  padding: $spacing-400 $spacing-300;
+  background: $bg-primary;
+  display: block;
+  border-radius: $border-radius-mid;
+  border: 1px solid $color-shade-navy-40;
+  margin-bottom: $spacing-600;
 
-  &.wizard--bg-dark {
-    background: linear-gradient(
-                    135deg,
-                    $color-accent 25%,
-                    $color-primary-navy 100%
-    );
-    color: $color-white;
+  > legend {
+    margin-bottom: 0;
+    display: flex;
+  }
 
-    .text-wrapper,
-    .number-wrapper,
-    .email-wrapper,
-    .radio-wrapper {
-      label,
-      .field-label {
-        color: $color-white;
-      }
+  .panel-formcontextualhelp__header {
+    display: flex;
+    align-items: center;
+    margin-bottom: $spacing-200;
+  }
 
-      input,
-      textarea {
-        color: $color-white;
+  .panel-formcontextualhelp__icon {
+    margin-right: $spacing-200;
+    width: 24px;
+    height: 24px;
+  }
 
-        &::placeholder {
-          color: rgba($color-white, 0.75);
-        }
-      }
-    }
+  .panel-formcontextualhelp__title {
+    color: $text-dark;
+    font-size: $size-font-h6;
+    font-weight: $font-weight-bold;
+    line-height: 125%;
+    letter-spacing: $letter-spacing-default;
+  }
 
-    h1,
-    h2,
-    h3 {
-      color: $color-white;
-      background: none;
-      background-clip: unset;
-      -webkit-background-clip: unset;
-      -webkit-text-fill-color: $color-white;
-      font-family: $font-family;
-      margin-bottom: $spacing-600;
+  .plain-text-wrapper {
+    p {
+      margin-top: 0;
+      padding: $spacing-100 0;
 
-      &:last-child:not(:first-child) {
+      &:last-child {
         margin-bottom: 0;
       }
     }
-
-    h4,
-    h5,
-    h6 {
-      color: $color-white;
-      font-family: $font-family;
-      margin-bottom: $spacing-100;
-
-      &:last-child:not(:first-child) {
-        margin-bottom: 0;
-      }
-    }
-
-    p,
-    .subtitle {
-      color: $color-white;
-    }
-
-    .subtitle {
-      font-style: normal;
-      font-weight: lighter;
-      line-height: 130%;
-      margin: 0;
-
-      p {
-        margin: 0;
-        font-size: $size-font-subtitle;
-      }
-    }
   }
 
-  &.wizard--bg-mid {
-    background: linear-gradient(
-                    135deg,
-                    $color-shade-blue-10 25%,
-                    $color-shade-blue-25 100%
-    );
-  }
-
-  &.wizard--bg-dark,
-  &.wizard--bg-mid,
-  &.wizard--bg-light {
-    &::after {
-      @include media('tablet') {
-        content: '';
-        position: absolute;
-        display: block;
-        top: 0;
-        right: 0;
-        width: 360px;
-        height: 388px;
-        background-repeat: no-repeat;
-        background-size: contain;
-      }
-
-      @include media('desktop') {
-        top: auto;
-        right: auto;
-        left: 0;
-        bottom: 0;
-      }
-    }
-  }
-
-  &.wizard--bg-dark,
-  &.wizard--bg-mid {
-    &::after {
-      @include media('tablet') {
-        background-image: url('/images/mymsd-unity-pattern-top-right.svg');
-        background-position: top right;
-      }
-
-      @include media('desktop') {
-        background-image: url('/images/mymsd-unity-pattern-bottom-left.svg');
-        background-position: calc(100% - 120px) left;
-      }
-    }
-  }
-
-  &.wizard--bg-light {
-    background: $color-shade-blue-04;
-
-    &::after {
-      @include media('desktop') {
-        background-image: url('/images/mymsd-unity-pattern-top-right-light.svg');
-        background-position: left bottom;
-        transform: rotate(180deg);
-      }
+  &--info {
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-info-blue-info.svg');
     }
 
-    .p-large p {
-      font-size: $size-font-body-large;
+    .panel-formcontextualhelp__footer__link {
+      display: inline-flex;
+      align-items: center;
+      text-decoration: none;
       color: $text-dark-primary;
-      font-weight: normal;
-      font-style: normal;
-      line-height: 130%;
-      margin: 0;
+      font-weight: 500;
 
-      p {
-        margin: 0;
-        color: $text-primary;
-        font-size: $size-font-body-large;
+      &:hover,
+      &:focus {
+        color: $text-dark-primary;
+        text-decoration: none;
+      }
+
+      &::after {
+        content: url('images/icon-contextual-help-arrow-navy-right.svg');
+        margin-left: 0.5rem;
+        font-size: 1.25rem;
+        line-height: 1;
+      }
+    }
+
+    .panel-formcontextualhelp__footer__link-text {
+      margin-right: 0.75rem;
+      color: $text-dark;
+      font-weight: 500;
+      text-decoration: none;
+      transition: color 0.2s ease;
+
+      &:hover,
+      &:focus {
+        color: $text-accent;
+        text-decoration: none;
+      }
+
+      &:visited {
+        color: $text-dark;
       }
     }
   }
 
-  &.wizard--bg-light,
-  &.wizard--bg-mid {
-    color: $text-primary;
+  &--error {
+    border: 1px solid $stroke-error;
+    background: $color-shade-red-05;
 
-    h1 {
-      font-size: $size-font-h1;
-      font-weight: 700;
-      line-height: 130%;
-      color: $text-primary;
-      background: $color-gradient-blue;
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-error-primary.svg');
     }
 
-    h2,
-    h3 {
-      @include heading-default($text-primary);
-      background: $color-gradient-blue;
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    .panel-formcontextualhelp__title {
+      color: $text-error;
     }
 
-    h4,
-    h5,
-    h6 {
-      font-family: $font-family;
-      font-weight: $font-weight-bold;
-      font-size: $size-font-h6;
-      color: $color-primary-navy;
-      line-height: 130%;
-      letter-spacing: $letter-spacing-default;
-    }
+    .panel-formcontextualhelp__footer__link,
+    .panel-formcontextualhelp__footer__link-text {
+      color: $text-error;
+      font-weight: $font-weight-medium;
+      text-decoration: none;
 
-    .subtitle,
-    .strap-title {
-      font-size: $size-font-subtitle;
-      color: $text-dark-primary;
-      font-weight: normal;
-      line-height: 130%;
-      margin: 0;
+      &:hover,
+      &:focus,
+      &:visited {
+        color: $text-error;
+      }
     }
   }
 
-  p {
-    color: $text-dark-primary;
-    font-size: $size-font-body-default;
-    font-family: $font-family;
-    line-height: 1.6;
-    font-weight: 400;
+  &--primary {
+    border-radius: $border-radius-mid;
+    border: 1px solid $stroke-dark;
+    background: $bg-contextual-help-tertiary;
+    display: flex;
+    padding: $spacing-400;
+    align-items: flex-start;
+    gap: $spacing-300;
+    align-self: stretch;
+
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-info-primary.svg');
+    }
+
+    .panel-formcontextualhelp__title {
+      color: $text-dark;
+    }
+
+    .plain-text-wrapper p {
+      color: $text-dark-primary;
+    }
+
+    .panel-formcontextualhelp__footer__link::after {
+      content: url('images/icon-contextual-help-arrow-primary.svg');
+      margin-left: 0.5rem;
+    }
+  }
+
+  &--secondary {
+    border-radius: $border-radius-mid;
+    border: 1px solid $stroke-tertiary;
+    background: $bg-contextual-help-secondary;
+    display: flex;
+    padding: $spacing-400;
+    align-items: flex-start;
+    gap: $spacing-300;
+    align-self: stretch;
+
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-info-secondary.svg');
+    }
+
+    .plain-text-wrapper p {
+      color: $text-dark-primary;
+    }
+
+    .panel-formcontextualhelp__footer__link::after {
+      content: url('images/icon-contextual-help-arrow-secondary.svg');
+      margin-left: 0.5rem;
+    }
+  }
+
+  &--tertiary {
+    border-radius: $border-radius-mid;
+    border: 1px solid $stroke-dark;
+    background: $bg-contextual-help-tertiary;
+    display: flex;
+    padding: $spacing-400;
+    align-items: flex-start;
+    gap: $spacing-300;
+    align-self: stretch;
+
+    .panel-formcontextualhelp__icon {
+      content: url('images/icon-contextual-help-info-tertiary.svg');
+    }
+
+    .panel-formcontextualhelp__footer__link::after {
+      content: url('images/icon-contextual-help-arrow-tertiary.svg');
+      margin-left: 0.5rem;
+    }
+
+    .panel-formcontextualhelp__title,
+    .panel-formcontextualhelp__footer__link,
+    .panel-formcontextualhelp__footer__link-text,
+    .plain-text-wrapper p {
+      color: $text-white;
+    }
+  }
+
+  &--no-icon {
+    padding: $spacing-400;
+
+    .panel-formcontextualhelp__icon {
+      display: none;
+    }
+
+    .panel-formcontextualhelp__header {
+      align-items: flex-start;
+    }
+
+    .plain-text-wrapper p {
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
+
+// Icon alignment for image and text
+.field-wrapper.row {
+  display: flex;
+  align-items: center;
+  gap: $spacing-300;
+
+  .image-wrapper {
+    display: flex;
+    align-items: center;
+
+    img {
+      display: block;
+      height: auto;
+      max-width: 100%;
+    }
+  }
+
+  .plain-text-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    h6,
+    p {
+      margin: 0;
+    }
+  }
+}
+
+@include media('mobile') {
+  .field-wrapper.row {
+    flex-direction: column;
+    align-items: flex-start;
+
+    .plain-text-wrapper {
+      margin-top: $spacing-300;
+    }
   }
 }
