fix(bootstrap): revert back bootstrap original settings value

--- a/styles/bootstrap/_index.scss
+++ b/styles/bootstrap/_index.scss
@@ -2,20 +2,20 @@
 /// https://getbootstrap.com/docs/5.3/layout/grid/
 
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@use 'functions';
+// @use 'functions';
 
 // 2. Include any default variable overrides here
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
-@use 'variables';
-@use 'variables-dark';
+// @use 'variables';
+// @use 'variables-dark';
 
 // 4. Include any default map overrides here
 
 // 5. Include remainder of required parts
-@use 'maps';
-@use 'mixins';
-@use 'root';
+// @use 'maps';
+// @use 'mixins';
+// @use 'root';
 
 // 6. Include any other optional stylesheet partials as desired; list below is not inclusive of all available stylesheets
 @use 'containers';
